SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/asb_App__c.object
<CustomObject>
    <description>An app that is listed in one or more languages in the store.</description>
    <fields>
        <fullName>AppType__c</fullName>
        <description>The type of application.</description>
        <inlineHelpText>The type of application.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppURL__c</fullName>
        <description>App SSO URL</description>
        <inlineHelpText>App SSO URL</inlineHelpText>
        <label>AppURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>App_Full_Name__c</fullName>
        <description>App Full Name</description>
        <inlineHelpText>App Full Name</inlineHelpText>
        <label>App Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Tile_Info__c</fullName>
        <formula>IF(Helpdesk_Phone__c &lt;&gt; &apos;&apos;, Helpdesk_Phone__c  &amp;BR()&amp;
Helpdesk_Hours__c  &amp;BR()&amp;
HelpdeskEmail__c, Helpdesk_Hours__c  &amp;BR()&amp;
HelpdeskEmail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Tile Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Unique_ID__c</fullName>
        <description>App Unique ID - Component ORGs will use this during user approval and revocation</description>
        <displayFormat>App{0}</displayFormat>
        <inlineHelpText>App Unique ID - Component ORGs will use this during user approval and revocation</inlineHelpText>
        <label>App Unique ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <description>The categories in which the app is included in the store.</description>
        <inlineHelpText>The categories in which the app is included in the store.</inlineHelpText>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>ASETT</fullName>
                </value>
                <value>
                    <fullName>FMCC</fullName>
                </value>
                <value>
                    <fullName>RECON</fullName>
                </value>
                <value>
                    <fullName>CCRMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component_ORG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Component ORG</description>
        <inlineHelpText>Component ORG</inlineHelpText>
        <label>Component ORG</label>
        <referenceTo>Component_ORG__c</referenceTo>
        <relationshipLabel>Apps</relationshipLabel>
        <relationshipName>Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultListing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default listing is shown to users whose language setting doesn&apos;t match any language-specific listing for the app.</description>
        <inlineHelpText>The default listing is shown to users whose language setting doesn&apos;t match any language-specific listing for the app.</inlineHelpText>
        <label>Default Listing</label>
        <referenceTo>asb_Listing__c</referenceTo>
        <relationshipLabel>Apps</relationshipLabel>
        <relationshipName>Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstListedDate__c</fullName>
        <description>The date of the first published listing for the app.</description>
        <inlineHelpText>The date of the first published listing for the app.</inlineHelpText>
        <label>First Listed Date</label>
        <summarizedField>asb_Listing__c.ListedDate__c</summarizedField>
        <summaryFilterItems>
            <field>asb_Listing__c.Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Info__c</fullName>
        <description>Help Desk Info</description>
        <inlineHelpText>Help Desk Info</inlineHelpText>
        <label>Help Desk Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HelpdeskEmail__c</fullName>
        <label>Helpdesk Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Email__c</fullName>
        <description>Helpdesk Email</description>
        <inlineHelpText>Helpdesk Email</inlineHelpText>
        <label>Helpdesk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Hours__c</fullName>
        <description>Helpdesk Hours</description>
        <inlineHelpText>Helpdesk Hours</inlineHelpText>
        <label>Helpdesk Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Name__c</fullName>
        <description>HelpDesk Information</description>
        <inlineHelpText>HelpDesk Information</inlineHelpText>
        <label>Helpdesk Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Phone_NA__c</fullName>
        <formula>IF((Helpdesk_Phone__c == &quot;&quot;),&quot;NA&quot;,Helpdesk_Phone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helpdesk Phone NA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpdesk_Phone__c</fullName>
        <description>Helpdesk Phone</description>
        <inlineHelpText>Helpdesk Phone</inlineHelpText>
        <label>Helpdesk Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallUrl__c</fullName>
        <description>Install Url</description>
        <inlineHelpText>Install Url</inlineHelpText>
        <label>Install URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <description>The languages that the app supports.</description>
        <inlineHelpText>The languages that the app supports.</inlineHelpText>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce License</fullName>
                </value>
                <value>
                    <fullName>Community License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveListings__c</fullName>
        <description>The number of listings for the app that are published and available in the store.</description>
        <inlineHelpText>The number of listings for the app that are published and available in the store.</inlineHelpText>
        <label>Published Listings</label>
        <summaryFilterItems>
            <field>asb_Listing__c.Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LogoUrl__c</fullName>
        <description>Logo Image URL</description>
        <inlineHelpText>Logo Image URL</inlineHelpText>
        <label>LogoUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mode_of_Request__c</fullName>
        <label>Mode of Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web Service</fullName>
                </value>
                <value>
                    <fullName>Visualforce Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PageViewsAllTime__c</fullName>
        <description>The number of page views for the app for all time.</description>
        <inlineHelpText>The number of page views for the app for all time.</inlineHelpText>
        <label>Page Views (All Time)</label>
        <summarizedField>asb_Listing__c.PageViewsAllTime__c</summarizedField>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PageViews__c</fullName>
        <description>The number of page views for the app in the last 30 days.</description>
        <inlineHelpText>The number of page views for the app in the last 30 days.</inlineHelpText>
        <label>Page Views</label>
        <summarizedField>asb_Listing__c.PageViews__c</summarizedField>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PopularityAllTime__c</fullName>
        <description>Popularity by requests/installs (dependent on app type) for all time.</description>
        <inlineHelpText>Popularity by requests/installs (dependent on app type) for all time.</inlineHelpText>
        <label>Installs</label>
        <summarizedField>asb_Listing__c.PopularityAllTime__c</summarizedField>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Popularity__c</fullName>
        <description>Popularity by requests/installs (dependent on app type) for last 30 days.</description>
        <inlineHelpText>Popularity by requests/installs (dependent on app type) for last 30 days.</inlineHelpText>
        <label>Popularity (30 Days)</label>
        <summarizedField>asb_Listing__c.Popularity__c</summarizedField>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Publication status of the app: if it has any published listings it is published, otherwise hidden.</description>
        <formula>IF(LiveListings__c &gt; 0,  $Label.asb_Published, $Label.asb_Hidden)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Publication status of the app: if it has any published listings it is published, otherwise hidden.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <description>The store in which the app is listed.</description>
        <inlineHelpText>The store in which the app is listed.</inlineHelpText>
        <label>Store</label>
        <referenceTo>asb_Store__c</referenceTo>
        <relationshipLabel>Apps</relationshipLabel>
        <relationshipName>Apps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visual_Force_Page_URL__c</fullName>
        <label>Visual Force Page URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the app is available in the store and included in the administrator&apos;s activities.</description>
        <inlineHelpText>Indicates if the app is available in the store and included in the administrator&apos;s activities.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>App</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AppURL__c</columns>
        <columns>App_Full_Name__c</columns>
        <columns>App_Unique_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Helpdesk_Name__c</columns>
        <columns>Helpdesk_Phone__c</columns>
        <columns>HelpdeskEmail__c</columns>
        <columns>Helpdesk_Hours__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>